feat: Implement full multiplayer system with Socket.IO
- Create Socket.IO server with room management and game state sync
- Implement client-side socket service with event handling
- Add multiplayer lobby with join/create room functionality
- Integrate real-time player movement and synchronization
- Add multiplayer ability usage with server validation
- Implement game start coordination across all players
- Add connection status indicators and error handling
- Support both single-player and multiplayer modes
- Create room-based chat system (framework ready)

Server Features:
- Room creation and management (up to 10 players)
- Real-time player position sync
- Ability usage validation and broadcasting
- Game state synchronization
- Automatic role assignment on game start
- Player connection/disconnection handling

Client Features:
- Multiplayer lobby with room joining
- Real-time player movement across clients
- Synchronized ability effects and fear application
- Connection status monitoring
- Automatic reconnection handling
- Cross-player event broadcasting

Technical Implementation:
- Socket.IO for real-time bidirectional communication
- Server-side game state authority with client prediction
- Room-based event isolation for multiple concurrent games
- Type-safe event handling with proper error management
- Graceful fallback to single-player mode on connection failure

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "server": "tsx server/server.ts",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --fix",
     "format": "prettier --write src/**/*.{ts,tsx,json,css}"
@@ -34,12 +36,15 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
     "@typescript-eslint/parser": "^8.52.0",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
-    "prettier": "^3.7.4"
+    "prettier": "^3.7.4",
+    "tsx": "^4.21.0"
   }
 }
